# cv-generator

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml
.cursor/rules/: coder.mdc  tester.mdc
.github/workflows/: test.yml
.streamlit/: config.toml  credentials.toml
src/cv_generator/: __init__.py  cli.py  config.py  test_cli.py
src/cv_generator/agents/: __init__.py  gap_analyzer.py  job_analyzer.py  tailor.py  validator.py
src/cv_generator/graph/: __init__.py  pipeline.py  state.py
src/cv_generator/models/: __init__.py  cv.py  job.py  profile.py
src/cv_generator/services/: __init__.py  docx_generator.py  google_docs.py  job_fetcher.py  linkedin_import.py  linkedin_url_import.py  llm.py  storage.py  stub_llm.py
src/cv_generator/ui/: app.py
templates/: cv_template.docx
tests/: conftest.py  fake_llm.py  test_cli.py  test_config.py  test_docx_generator.py  test_gap_analyzer.py  test_google_docs.py  test_job_analyzer.py  test_job_fetcher.py  test_linkedin_import.py  test_linkedin_url_import.py  test_llm.py  test_models.py  test_pipeline.py  test_storage.py  test_tailor.py  test_validator.py
tests/e2e/: conftest.py  fixtures_data.py  helpers.py  test_additional_flows.py  test_app_smoke.py  test_backend_integration.py  test_full_flow.py
tests/e2e/fixtures/: Positions.csv  Profile.csv
