[project]
name = "cv-generator"
version = "0.1.0"
description = "AI-powered CV generator tailored to job offers, with LinkedIn profile data and DOCX export"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rafal" }]

dependencies = [
    "streamlit>=1.39",
    "langgraph>=0.2.50",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "pydantic[email]>=2.8",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "trafilatura>=1.12",
    "docxtpl>=0.18",
    "python-docx>=1.1",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.10",
]

[project.optional-dependencies]
google = [
    "google-api-python-client>=2.140",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.6",
]
e2e = [
    "pytest-playwright>=0.6",
]

[project.scripts]
cv-generator = "cv_generator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cv_generator"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not e2e'"
markers = [
    "e2e: end-to-end browser tests (Playwright + Streamlit server)",
]

[tool.coverage.run]
omit = ["src/cv_generator/ui/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
